overflow was fixed

--- a/src/about.css
+++ b/src/about.css
@@ -59,8 +59,6 @@
 .about {
   background: rgb(255, 255, 255, 0.9);
   border-radius: var(--radius);
-  /* display: grid;
-  grid-template-rows: auto 1fr; */
 }
 
 .btn-container {
@@ -72,21 +70,10 @@
 
 .tab-btn {
   margin: 0 0.75rem;
-  /* border: none;
-  text-transform: capitalize;
-  font-size: 1rem;
-  display: block;
-  background: var(--clr-grey-9);
-  cursor: pointer;
-  transition: var(--transition);
-  letter-spacing: var(--spacing); */
 }
 .tab-btn:hover:not(.active) {
   background: var(--clr-primary-10);
   color: var(--clr-primary-5);
-}
-.content p {
-  /* text-shadow: 0 1px 2px rgb(0, 0, 0, 0.6); */
 }
 
 /* hide content */
