--- a/src/style.css
+++ b/src/style.css
@@ -71,7 +71,6 @@ body {
   font-family: var(--ff-secondary);
   height: 100vh;
   background: url("./images/laptopimg.avif") center/cover no-repeat;
-  /* background: var(--clr-grey-10); */
   color: var(--clr-grey-1);
   line-height: 1.5;
   font-size: 0.875rem;
@@ -87,12 +86,6 @@ a {
 a:hover {
   color: var(--clr-white);
 }
-/* img:not(.logo) {
-  width: 100%;
-}
-img {
-  display: block;
-} */
 
 h1,
 h2,
@@ -101,7 +94,6 @@ h4 {
   letter-spacing: var(--spacing);
   text-transform: capitalize;
   line-height: 1.25;
-  /* margin-bottom: 0.75rem; */
   font-family: var(--ff-primary);
 }
 h1 {
@@ -167,12 +159,8 @@ p {
 }
 @media and screen (max-width: 650px) {
   .overlay-container {
-    /* width: 500px !important;
-    height: 250px;
-    max-width: var(--fixed-width); */
-  }
-  .overlay-container video {
-    /* justify-content: center; */
+    width: 100%;
+    //max-width: var(--fixed-width);
   }
 }
 .wework {
@@ -212,7 +200,7 @@ p {
   top: 0;
   left: 0;
   min-width: 100%;
-  /* height: 100%; */
+  height: 100%;
   background: rgba(73, 166, 233, 0.5);
   display: grid;
   place-items: center;
@@ -227,9 +215,9 @@ p {
 .overlay-container {
   background: var(--clr-primary-10);
   border-radius: var(--radius);
-  width: 900px;
-  height: 420px;
-  max-width: var(--fixed-width);
+  max-width: 900px;
+  min-height: 420px;
+  margin: 0;
   text-align: center;
   display: grid;
   place-items: center;
@@ -262,7 +250,6 @@ body {
 }
 
 .hero-img {
-  /* margin-right: 70px; */
   animation: bounce 2s ease-in-out infinite;
 }
 @keyframes bounce {
@@ -290,7 +277,7 @@ body {
 }
 .hero-text {
   position: absolute;
-  top: 320px;
+  bottom: -500px;
   left: 10px;
   background: rgb(155, 216, 255, 0.5);
   padding: 20px;
@@ -303,41 +290,4 @@ body {
   position: absolute;
   top: 10px;
   right: 200px;
-}
-
-// switch btn
-.switch-btn {
-  position: absolute;
-  bottom: 7%;
-  left: 7%;
-  width: 10rem;
-  height: 2rem;
-  display: flex;
-  border-radius: var(--radius);
-  align-items: center;
-  justify-content: space-around;
-  border: none;
-  transition: var(--transition);
-}
-.switch-btn span {
-  /* display: inline-block; */
-  font-size: 0.85rem;
-  cursor: pointer;
-  text-transform: capitalize;
-  color: var(--clr-primary-5);
-}
-.switch {
-  position: absolute;
-  width: 11%;
-  height: 7%;
-  bottom: 13px;
-  left: 185px;
-  background: var(--clr-primary-5);
-  border-radius: var(--radius);
-  margin: 0;
-  display: block;
-  transition: var(--transition);
-}
-.slide .switch {
-  left: 42%;
 }
